# notiontools

./: 01-kindle.html  README.md  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: doc_deploy.yml  pkg_testing.yml
notebooks/: 01-kindle.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml
notiontools/: _modidx.py  kindle.py
